Rattlesnake dog avoidance training. Movie Nights (specific movies and dates to come) Pow Wow updates Referenced past events: - Peace Officers event - Pacific Islander festival

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -183,12 +183,13 @@ are proud to present the<br></h2></p>
                             <h2 align="center"> and Native American
                               Craft Fair </h1>
 <p><h2 align="center">
-September 27<sup>th</sup> &mdash; 10am to 7pm <br>
+September 27<sup>th</sup> &mdash; 10am to 6pm <br>
 September 28<sup>th</sup> &mdash; 10am to 5:30pm
 </h2><p>
 <h3 align="center">
                                           <p>Princess Contest &mdash; ages 15 to 19</p>
                                           <p>All Drums &amp; Dancers Welcome!</p>
+<p>Honored Founders: Norm Phillips, Lina Schultz, Bill &ldquo;Standing Bear&rdquo; Kimmey</p>
 </h3>
                             <h2 id="PowWowNote" align="center"><b>
                                     Vendors, please contact Nadiya 
@@ -242,7 +243,7 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                                 Headman
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Casey Fox/Arikara
                                           </td>
                                         </tr>
                                         <tr>
@@ -250,7 +251,7 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                                 Headwoman
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Jessica Whiteshield/Cheyenne
                                           </td>
                                         </tr>
                                         <tr>
@@ -259,7 +260,7 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                               </p>
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Dakota Jacome/Kumeyaay
 										  </td>
                                         </tr>
                                         <tr>
@@ -267,7 +268,7 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                                 Headgirl
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Olivia Whiteshield/Cheyenne
                                           </td>
                                         </tr>
                                         <tr>
@@ -291,7 +292,7 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Hale &amp; Company
                                           </td>
                                         </tr>
                                       </tbody>
@@ -327,7 +328,7 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                           Schedule</font></b></p>
                                     <ul>
                                       <li><font color="#006600"><font
-                                              size="3"> Saturday, <br>10am&mdash;7pm</font><font
+                                              size="3"> Saturday, <br>10am&mdash;6pm</font><font
                                             size="3"><br>
                                           </font></font></li>
                                       <font color="#006600"><font
@@ -410,6 +411,7 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                           <dt>Founders:
                                             </dt>
                                             <dd>
+                                            Norm Phillips<br>
                                             Lina Schultz<br>
                                             Bill Kimmey
                                             </dd>
