--- a/index.htm
+++ b/index.htm
@@ -202,8 +202,44 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 </tr>
                                 <tr>
                                 <td>
+                                <h3>Click on the badge below to see the program for the</h3>
+                                <h2 align="center">National Peace Officers Memorial Day Event at the Hart</h2>
+<a href="Event_Pages/NationalPoliceWeek.jpg" rel="lightbox[police]" 
+title="National Peace Officers Memorial Day Event at the Hart">
+<center> <img src="Event_Pages/thumbs/NationalPoliceWeek.jpg"/></center></a>
+                                <h3>It captures the agenda, but can never convey the <b>meaning</b>
+                                of this informative, touching and important event.</h3>
+</td>
+</tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                <td>
+                                <h3>Click on the image below to read <u>The Signal</u> article on the </h3>
+                                <h2>Pacific Islander Festival</h2> <h3>at Hart Park</h3><br>
+<center><a href="http://www.signalscv.com/section/36/article/119604/" target="_blank">
+<img src="Event_Pages/images/pacific.jpg"/></a></center>
+</td>
+</tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                <td>
                                 <h3>Click below for highlights of the</h3>
                                 <h2 align="center">2014 Cowboy Festival Hart Park Events!</h2>
+                                <center>
 <a href="Event_Pages/cowboyfest2014/LorenJanes.jpg" rel="lightbox[cowboyfest]" 
 title="Stuntman Loren Janes makes a surprise appearance at the Walk of Western Stars tour!">
 <img src="Event_Pages/cowboyfest2014/thumbs/LorenJanes.jpg"/></a>
@@ -213,6 +249,7 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
 <a href="Event_Pages/cowboyfest2014/ChandlerAndGail.jpg" rel="lightbox[cowboyfest]" 
 title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl Rogers-Barnett">
 <img src="Event_Pages/cowboyfest2014/thumbs/ChandlerAndGail.jpg"/></a>
+                                </center>
                                 </td>
                                 </tr>
                                 <tr>
@@ -252,25 +289,13 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">May. 10, 2014
+                                      <td id="EventDate">Every other Friday in Summer, 
+                                      starting June 27<sup>th</sup>. 7pm.
                                       </td>
                                       <td id="Event">
-									  Santa Clarita Valley<br>
-									  <a href="Event_Pages/pacific.html">
-									  <h3>Pacific Islander Festival</h3></a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">May 15, 2014
-                                      </td>
-                                      <td id="Event">
-									  Friends Of Hart Park Invite You To<br>
-                                      RESPECT * HONOR * REMEMBER<br>
-                                      <a href="Event_Pages/policeevent.jpg" 
-                                      rel="lightbox[police]" 
-                                      title="National Peace Officers Memorial Day">
-                                      <h3>National Peace Officers Memorial Day</h3></a>
-                                      </td>
+									  <h3>Movies In The Park</h3><br>
+                                      Stay tuned for specifics.  FREE event!  
+                                      Held at the Picnic Grounds in Hart Park</td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Aug. 9, 2014</td>
@@ -278,45 +303,24 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                       <h3>Silents Under the Stars</h3>
                                       and stay tuned for further details!</td>
                                     </tr>
+                                    <tr>
+                                      <td id="EventDate">Sep. 27<sup>th</sup> &amp; 28<sup>th</sup>
+                                      </td>
+                                      <td id="Event">
+									  Hart of the West
+                                      <h3><a href="Event_Pages/powwow.html">
+                                      Pow Wow</a></h3>
+                                      </td>
+                                    </tr>
                                   </tbody>
                                 </table>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
 
-<h2>You are invited...</h2>
-<a href="Event_Pages/policeevent.jpg" 
-rel="lightbox[police2]" 
-title="National Peace Officers Memorial Day">
-<img src="Event_Pages/police.jpg"/></a></p>
-<p class="lots">to join the Friends of Hart Park for an evening dedicated to the legacy and
-work of our peace officers on 
-<a href="Event_Pages/policeevent.jpg" 
-rel="lightbox[police3]" 
-title="National Peace Officers Memorial Day">
-<b>National Peace Officers Memorial Day</b>
-</a>
-, Thursday, <b>May 15<sup>th</sup> at 7pm</b>. Open <b>free</b> to the 
-public, this special evening takes place <b>at Hart Hall</b> on the grounds of the William S. Hart County Park. 
-<p class="lots">Joe Herrington, nationally known cowboy poet, will be the evening's emcee. 
-The program will include distinguished speakers including Friends of Hart Park Board President, 
-Laurene Weste and authors J.R. Sanders, Sven Crongeyer, Tom Hays and Art 
-Sjoquist, who will speak on the subjects of Old West lawmen, and the histories of the early Los Angeles 
-Sheriff's Department and the Los Angeles Police Department. Bud Bradshaw, author of Brandishing, will speak 
-on the legacy of the "Newhall Incident" and pay tribute to officers James "Skip" Pence, Roger Gore, Walt 
-Frago and George "Mike" Alleyn. A Special tribute to Deputy Sheriff Arthur E. Pelino, concludes the live 
-presentation part of the evening. </p>
-<p class="lots">Audience and presenters are invited to enjoy a time of Fellowship immediately 
-following the program. Live music throughout the evening is provided by John Bergstrom, Gency Brown, and 
-Jason "Buck" Corbett, members of the Western Music Association California Chapter.</p>
-<p class="lots">This event is FREE to the public and is made possible through the generous contributions of Friends of Hart
-Park, Western Music Association, and OutWest Boutique and Cultural Center. 
-<i>
-Special thanks to Rachel Barnes, Norm Phillips, J.R. Sanders, Roger Palmer, Gordon Graham, and Boy Scout Troop 228.
-</i></p>
-<p class="lots"><b>For further event information, please contact the William S. Hart Museum office at (661) 254-4584 or Bobbi 
-Jean Bell, OutWest, (661) 255-7087.</b></p>
-</h4>
+<h2>June 1:  Rattlesnake Training for Dogs</h2>
+<h3>in the Hart Park's picnic area</h3>
+<img src="Event_Pages/images/rattle.png" /><br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                         </tr>
                       </tbody>
