--- a/index.html
+++ b/index.html
@@ -201,17 +201,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             width="313"></font></b></i></td>
                                 </tr>
                                 <tr>
-                                <td>
-                                <h3>Click on the badge below to see the program for the</h3>
-                                <h2 align="center">National Peace Officers Memorial Day Event at the Hart</h2>
-<a href="Event_Pages/NationalPoliceWeek.jpg" rel="lightbox[police]" 
-title="National Peace Officers Memorial Day Event at the Hart">
-<center> <img src="Event_Pages/thumbs/NationalPoliceWeek.jpg"/></center></a>
-                                <h3>It captures the agenda, but can never convey the <b>meaning</b>
-                                of this informative, touching and important event.</h3>
-</td>
-</tr>
-                                <tr>
                                   <td style="vertical-align: top;">
                                         <font color="#FFCC00" size="6">
                                           <img
@@ -252,6 +241,17 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                 </center>
                                 </td>
                                 </tr>
+                                <tr>
+                                <td>
+                                <h3>Click on the badge below to see the program for the</h3>
+                                <h2 align="center">National Peace Officers Memorial Day Event at the Hart</h2>
+<a href="Event_Pages/NationalPoliceWeek.jpg" rel="lightbox[police]" 
+title="National Peace Officers Memorial Day Event at the Hart">
+<center> <img src="Event_Pages/thumbs/NationalPoliceWeek.jpg"/></center></a>
+                                <h3>It captures the agenda, but can never convey the <b>meaning</b>
+                                of this informative, touching and important event.</h3>
+</td>
+</tr>
                                 <tr>
                                   <td style="vertical-align: top;">
                                         <font color="#FFCC00" size="6">
@@ -317,10 +317,14 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-
-<h2>June 1:  Rattlesnake Training for Dogs</h2>
-<h3>in the Hart Park's picnic area</h3>
-<img src="Event_Pages/images/rattle.png" /><br>
+<h2>Wondering about Silents Under the Stars?</h2>
+<h3>Don't worry, we haven't forgotten!  We're planning something extra special
+this year, so please stay tuned!</h3>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+<h2>Ongoing event from our fine neighbors here in Hart Park!</h2>
+<img src="Event_Pages/swapmeet.jpg" /><br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                         </tr>
                       </tbody>
