--- a/index.html
+++ b/index.html
@@ -293,20 +293,11 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       starting June 27<sup>th</sup>. 7pm.
                                       </td>
                                       <td id="Event">
-                                      Click here for specifics:<br>
-<a href="Event_Pages/movies2014/findingnemo.jpg" rel="lightbox[movies]" 
-    title="June 27<sup>th</sup> &mdash; Finding Nemo &mdash; &copy;Disney">
 									  <h3>Movies In The Park</h3>
-</a>
-<a href="Event_Pages/movies2014/junglebook.jpg" rel="lightbox[movies]" 
-    title="July 11<sup>th</sup> &mdash; Jungle Book &mdash; &copy;Disney"></a>
-<a href="Event_Pages/movies2014/landbefore.jpg" rel="lightbox[movies]" 
-    title="July 25<sup>th</sup> &mdash; The Land Before Time &mdash; &copy;Universal"></a>
-<a href="Event_Pages/movies2014/alldogs.jpg" rel="lightbox[movies]" 
-    title="Aug. 8<sup>th</sup> &mdash; All Dogs Go To Heaven &mdash; &copy;Sony Pictures"></a>
-<a href="Event_Pages/movies2014/cars.jpg" rel="lightbox[movies]" 
-    title="Aug. 22<sup>nd</sup> &mdash; Cars &mdash; &copy;Disney"></a>
-                                      FREE EVENT held at the Picnic Grounds in Hart Park</td>
+                                      FREE EVENT held at the Picnic Grounds in Hart Park.
+                                      <small>
+                                      Call park for individual movie titles at (661) 259-1750.
+                                      </small></td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Aug. 9, 2014</td>
@@ -321,6 +312,13 @@ title="National Peace Officers Memorial Day Event at the Hart">
 									  Hart of the West
                                       <h3><a href="Event_Pages/powwow.html">
                                       Pow Wow</a></h3>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Oct. 12<sup>th</sup>
+                                      </td>
+                                      <td id="Event">
+									  <h3>"Bow Wows &amp; Meows" Pet Fair</h3>
                                       </td>
                                     </tr>
                                   </tbody>
