Added "New West", "Ray Lowe" and proper PayPal button.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -123,7 +123,7 @@ function MM_swapImage() { //v3.0
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-										<font size="6" face="Copperplate Gothic Bold">The 20th Annual<br>Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
+										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											<p align="center">
 											Join us on
@@ -138,11 +138,11 @@ function MM_swapImage() { //v3.0
 											<h4>(select quantity on shopping cart page)</h4>
 <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="FKCTFULNJ9RNA">
+<input type="hidden" name="hosted_button_id" value="YR6M7R7NF52VL">
 <table>
 <tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
-	<option value="Individual Ticket">Individual Ticket $50.00 USD</option>
-	<option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
+    <option value="Individual Ticket">Individual Ticket $50.00 USD</option>
+    <option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
 </select> </td></tr>
 <tr><td><input type="hidden" name="on1" value="Name for Pickup at Will-Call">Name for Pickup at Will-Call</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
 </table>
@@ -176,9 +176,11 @@ We are very pleased to announce that we're showing a William S. Hart film we've 
 <center><img src="images/whiteoak.jpg" /></center>
 </h2>
 <p align="center">
-White Oak features interleaved plots (advanced for that time), imaginative characters, and some good old western shoot-em-up fun, for a movie that will captivate and entertain.
+White Oak features interleaved plots (advanced for that time), imaginative characters, and some good old western shoot-em-up fun, for a movie that will captivate and entertain.</p>
 <p align="center">
-In addition to William S. Hart, it include the fetching Vola Vale, camera work by famed cinematrographer Joe August, and best of all Fritz, Hart's pinto pony, as well as a wonder-dog named Jeff!
+In addition to William S. Hart, it include the fetching Vola Vale, camera work by famed cinematrographer Joe August, and best of all Fritz, Hart's pinto pony, as well as a wonder-dog named Jeff!</p>
+<p align="center">
+As always, our movie will be accompanied LIVE by Mr. Ray Lowe at the keyboard!"</p>
 										</td>
 													</tr>
 													<tr>
@@ -190,7 +192,11 @@ In addition to William S. Hart, it include the fetching Vola Vale, camera work b
 										<span class="Apple-style-span">
 										<span style="letter-spacing: normal">
 										<font face="Copperplate Gothic Bold" size="6" color="#770000">
-										also featuring:<br></font></span></span></p>
+										also featuring music by our special guests,<br>recording artists "New West"!<br>
+                                        <a target="_blank" href="http://cowboyband.com">
+                                        <img src="silents/NW_standing.jpg"></a><br>
+                                        But that's not all!...
+                                        </font></span></span></p>
 														</td>
 													</tr>
 													<tr>
