--- a/index.html
+++ b/index.html
@@ -310,9 +310,10 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Aug. 9, 2014</td>
-                                      <td id="Event">Mark your Calendars for<br>
-                                      <h3>Silents Under the Stars</h3>
-                                      and stay tuned for further details!</td>
+                                      <td id="Event">Buy your Tickets for<br>
+                                      <a href="Event_Pages/silents.html">
+                                      <h3>Silents Under the Stars</h3></a>
+                                      We have quite a special evening planned this year!</td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Sep. 27<sup>th</sup> &amp; 28<sup>th</sup>
@@ -328,14 +329,16 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h2>Wondering about Silents Under the Stars?</h2>
-<h3>Don't worry, we haven't forgotten!  We're planning something extra special
-this year, so please stay tuned!</h3>
+<h2>Click below to purchase your tickets for 
+<a href="Event_Pages/silents.html">
+Silents Under the Stars!<br>
+<img src="Event_Pages/images/whiteoak-sm.jpg"/>
+</h2>
+<h3>This year, we're proud to announce music provided by recording artists, "New West"</h3>
+<img src="Event_Pages/silents/NW_standing.jpg"/></a>
+
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h2>Ongoing event from our fine neighbors here in Hart Park!</h2>
-<img src="Event_Pages/swapmeet.jpg" /><br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                         </tr>
                       </tbody>
