--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -191,12 +191,10 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                           <p>All Drums &amp; Dancers Welcome!</p>
 <p>Honored Founders: Norm Phillips, Lina Schultz, Bill &ldquo;Standing Bear&rdquo; Kimmey</p>
 </h3>
-<!--
                             <h2 id="PowWowNote" align="center"><b>
-                                    Vendors, please contact Nadiya 
+                                    Vendors, please contact Cindy Reeves 
                                     at the phone number shown below.</b><br>
 							</h2>
--->
                         </tr>
                         <tr>
                           <td>
@@ -417,12 +415,10 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                             Lina Schultz<br>
                                             Bill Kimmey
                                             </dd>
-<!--
 										  <dt>Vendor info</dt>
-                                          <dd>Nadiya Littlewarrior<br>
-                                              (661) 298-3014<br>
-                                               kiwenkikwe@yahoo.com</dd>
--->
+                                          <dd>Cindy Reeves<br>
+                                              (661) 857-6178 
+                                          </dd>
                                         </b>
                                       </dl>
                                       <br>
