--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -178,9 +178,9 @@ We are very pleased to announce that we're showing a William S. Hart film we've 
 <p align="center">
 White Oak features interleaved plots (advanced for that time), imaginative characters, and some good old western shoot-em-up fun, for a movie that will captivate and entertain.</p>
 <p align="center">
-In addition to William S. Hart, it include the fetching Vola Vale, camera work by famed cinematrographer Joe August, and best of all Fritz, Hart's pinto pony, as well as a wonder-dog named Jeff!</p>
+In addition to William S. Hart, it include the fetching Vola Vale, camera work by famed cinematographer Joe August, and best of all Fritz, Hart's pinto pony, as well as a wonder-dog named Jeff!</p>
 <p align="center">
-As always, our movie will be accompanied LIVE by Mr. Ray Lowe at the keyboard!"</p>
+As always, our movie will be accompanied LIVE by Mr. Ray Lowe at the keyboard!</p>
 										</td>
 													</tr>
 													<tr>
@@ -206,7 +206,7 @@ As always, our movie will be accompanied LIVE by Mr. Ray Lowe at the keyboard!"<
 														<td>
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												Evening Tours &amp; Patio Seating -- 
+												Evening Mansion Tours &amp; Patio Seating -- 
 												6pm</font></span></td>
 													</tr>
 													<tr>
