Added Bow Wows details and Rose Show calendar events

--- a/index.htm
+++ b/index.htm
@@ -319,7 +319,22 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       <td id="EventDate">Oct. 12<sup>th</sup>
                                       </td>
                                       <td id="Event">
-									  <h3>"Bow Wows &amp; Meows" Pet Fair</h3>
+									  <h3>
+                                      <a href="Event_Pages/images/bowwows2014.png" rel="lightbox[bowwow]">
+                                      "Bow Wows &amp; Meows" Pet Fair
+                                      </a>
+                                      </h3>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Nov. 1<sup>st</sup>
+                                      </td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/images/roses2014.png" rel="lightbox[rose]">
+                                      <h3>
+                                      "Wild West" Rose Show
+                                      </h3>
+                                      </a>
                                       </td>
                                     </tr>
                                   </tbody>
