Moved things around, closed out silents, updated pow wow.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -183,8 +183,8 @@ are proud to present the<br></h2></p>
                             <h2 align="center"> and Native American
                               Craft Fair </h1>
 <p><h2 align="center">
-September 27<sup>th</sup> &mdash; 10am to 6pm <br>
-September 28<sup>th</sup> &mdash; 10am to 5:30pm
+September 27<sup>th</sup> &mdash; 10am to 7pm <br>
+September 28<sup>th</sup> &mdash; 10am to 6pm
 </h2><p>
 <h3 align="center">
                                           <p>Princess Contest &mdash; ages 15 to 19</p>
@@ -417,7 +417,11 @@ September 28<sup>th</sup> &mdash; 10am to 5:30pm
                                             </dd>
 										  <dt>Vendor info</dt>
                                           <dd>Cindy Reeves<br>
-                                              (661) 857-6178 
+                                              (661) 857-6178<br>
+                                              <small>
+                                              <a href="mailto:Allboys2000@sbcglobal.net" target="_blank">
+                                              Allboys2000@sbcglobal.net</a>
+                                                </small>
                                           </dd>
                                         </b>
                                       </dl>
