--- a/index.htm
+++ b/index.htm
@@ -289,22 +289,15 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Every other Friday in Summer, 
-                                      starting June 27<sup>th</sup>. 7pm.
+                                      <td id="EventDate">Sept. 13<sup>th</sup> &amp; 14<sup>th</sup><br>
+                                      10am-5pm
                                       </td>
                                       <td id="Event">
-									  <h3>Movies In The Park</h3>
-                                      FREE EVENT held at the Picnic Grounds in Hart Park.
-                                      <small>
-                                      Call park for individual movie titles at (661) 259-1750.
-                                      </small></td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Aug. 9, 2014</td>
-                                      <td id="Event">Buy your Tickets for<br>
-                                      <a href="Event_Pages/silents.html">
-                                      <h3>Silents Under the Stars</h3></a>
-                                      We have quite a special evening planned this year!</td>
+                                      <small> 3<sup>rd</sup> Annual</small>
+                                      <a href="http://www.hdmmrc.com/events.php" target="_blank">
+									  <h3>Hart Park Modular Model Train Show</h3></a>
+                                      in Hart Hall
+                                      </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Sep. 27<sup>th</sup> &amp; 28<sup>th</sup>
@@ -316,14 +309,14 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Oct. 12<sup>th</sup>
+                                      <td id="EventDate">Oct. 12<sup>th</sup><br>
+                                      11am-4pm
                                       </td>
                                       <td id="Event">
 									  <h3>
-                                      <a href="Event_Pages/images/bowwows2014.png" rel="lightbox[bowwow]">
-                                      "Bow Wows &amp; Meows" Pet Fair
-                                      </a>
-                                      </h3>
+                                      <a href="http://www.bowwowsandmeows.org/" target="_blank">
+                                      "Bow Wows &amp; Meows" </a> </h3>
+                                      Pet Fair
                                       </td>
                                     </tr>
                                     <tr>
@@ -342,12 +335,17 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h2>Click below to purchase your tickets for 
-<a href="Event_Pages/silents.html">
-Silents Under the Stars!<br>
+                                            <h3>Go to our 
+                                            <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
+                                            Facebook page</a>
+                                            to see pictures from the event as they become available.</h3>
+                                            <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
+                                            <img src="Event_Pages/silents/silents2014/panorama-sm.jpg"/><br>
 <img src="Event_Pages/images/whiteoak-sm.jpg"/>
+                                            </a>
 </h2>
-<h3>This year, we're proud to announce music provided by recording artists, "New West"</h3>
+<h3>This year, we were proud to feature music provided by recording artists, "New West"</h3>
+<a href="http://cowboyband.com/" target="_blank">
 <img src="Event_Pages/silents/NW_standing.jpg"/></a>
 
                                     <p style="margin-top: 7px;
