--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -111,68 +111,58 @@ function MM_swapImage() { //v3.0
 								  <TABLE border="1" width="874" bordercolorlight="#800000">
 									<TBODY>
 										<TR>
-											<TD valign="top">
-											<B class="EVNTC">When?</B><br>
+											<TD align="center" valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 										<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
 										<span class="Apple-style-span" style="font-family: Copperplate Gothic Bold; text-align: -webkit-center">
-										<font size="5">The Friends Of Hart Park 
+										<font size="5">Thank you for coming to the 2014<br>
+                                        <h3 align="center">Silents Under the Stars</h3> 
+                                        <h4 align="center">hosted by The Friends Of Hart Park 
 										<br>
 										and the<br>
-&nbsp;William S. Hart Park &amp; Museum present:</font></span></span></p>
+&nbsp;William S. Hart Park &amp; Museum</h4></font></span></span></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
-											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											<p align="center">
-											Join us on
-											<h3 align="center">
-											Saturday, August 9<sup>th</sup>, 
-											2014 6pm</h3></span></TD>
+											Please check back for
+											</p>
+										</span>
+                                     <span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span align="center" style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">2015&rsquo;s Silents Under the Stars!</span></font></span></span></p>
+											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
+                                            </span>
+                                            </TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-											<h3>Buy tickets here! </h3>
-											<h4>(select quantity on shopping cart page)</h4>
-<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="YR6M7R7NF52VL">
-<table>
-<tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
-    <option value="Individual Ticket">Individual Ticket $50.00 USD</option>
-    <option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
-</select> </td></tr>
-<tr><td><input type="hidden" name="on1" value="Name for Pickup at Will-Call">Name for Pickup at Will-Call</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-
+											<h1 align="center"><br><br>Sold Out!</h1>
 
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
-											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<font size="4">To buy tickets over the phone, or for 
-											additional info, Call (661) 222&ndash;9542</font></p>
-											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<span style="letter-spacing: normal">
-											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
-											<font size="4">Tickets are non-Refundable</font></span></span></p>
 											</TD>
 											</TR>
+                                            <TR>
+                                            <TD colspan="2" align="center">
+                                            <h3>Go to our 
+                                            <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
+                                            Facebook page</a>
+                                            to see pictures from the event as they become available.</h3>
+                                            <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
+                                            <img src="silents/silents2014/panorama-med.jpg"/><br>
+                                            </a>
+                                            </TD>
+                                            </TR>
 											<TR>
 											  <TD colspan="2">
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
 											<p>
-											<B class="EVNTC">Just Announced!</B>
+											<B class="EVNTC">What we did:</B>
 <p>
 <h2 align="center">
-We are very pleased to announce that we're showing a William S. Hart film we've never shown at "Silents" before:
+We were very pleased to announce that we showed a William S. Hart film we've never shown at "Silents" before:
 <center><img src="images/whiteoak.jpg" /></center>
 </h2>
 <p align="center">
@@ -323,7 +313,7 @@ As always, our movie will be accompanied LIVE by Mr. Ray Lowe at the keyboard!</
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
                                         <img alt="SCV In The Movies" border="0" src="images/scvinthemovies.jpg">
 											<h3 align=center> 
-										Our movie will be hosted by 
+										Our movie was hosted by 
                                         &ldquo;<a target="_blank" href="http://scvinthemovies.com">SCV 
                                         In The Movies</a>&rdquo; hosts E.J. Stephens and Bill West, along with some special guests.
 											</TD>
