--- a/index.html
+++ b/index.html
@@ -289,23 +289,23 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Sept. 13<sup>th</sup> &amp; 14<sup>th</sup><br>
-                                      10am-5pm
-                                      </td>
-                                      <td id="Event">
-                                      <small> 3<sup>rd</sup> Annual</small>
-                                      <a href="http://www.hdmmrc.com/events.php" target="_blank">
-									  <h3>Hart Park Modular Model Train Show</h3></a>
-                                      in Hart Hall
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Sep. 27<sup>th</sup> &amp; 28<sup>th</sup>
                                       </td>
                                       <td id="Event">
 									  Hart of the West
                                       <h3><a href="Event_Pages/powwow.html">
                                       Pow Wow</a></h3>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Oct. 10<sup>th</sup> 6pm
+                                      </td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/GhostAndMrChicken.png" rel="lightbox[hartoween]">
+                                      <h3>
+                                      "Hart-O-Ween" Movie:  The Ghost &amp; Mr. Chicken
+                                      </h3>
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
