--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@ title="National Peace Officers Memorial Day Event at the Hart">
                                       </h3>
                                       </a>
                                       </td>
+                                      <td id="EventDetail">
+                                      Seating is limited!  First come, first seated.
+                                      </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Oct. 12<sup>th</sup><br>
